1998-06-12  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* refmeta.sgml: Scale graphic to 75%.

	* Makefile.am (gridexamples.sgml): Update IDs to
	SWARM.module.SGML.type.

	* conventions-app.sgml, gpl-app.sgml, grid-app.sgml,
	lgpl-app.sgml, probes-app.sgml, ref00.sgml, ref00a.sgml,
	refmeta.sgml: Likewise.

1998-06-11  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* refbook.sgml: Use jpeg instead of jpg for notation and
	local.notation.class.

1998-06-10  Marcus G. Daniels  <mgd@lucero.santafe.edu>

	* Makefile.am: Move CLEANFILES to Makefile.rules.
	(GENERATED_SGML): Move versions.ent to Makefile.rules.
	(ENT): New variable, the list of .ent files for this module.
	(SGML): Add ENT.

1998-06-10  Alex Lancaster  <alex@santafe.edu>

	* lgpl-app.sgml, gpl-app.sgml, ref00a.sgml: Fixed the IDs to have
	the appropriate "SWARM.SRC." prefix in the content ID.

	* ref00.sgml: Made SIMPLESECTs into SECT2s.  Fixed redundant
	"SWARM.SRC." in PREFACE id.

1998-06-09  Alex Lancaster  <alex@santafe.edu>

	* refmeta.sgml: Change CORPAUTHOR to 'corpauthor' - an SFI Hive
	global entity.  

1998-06-09  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* refmeta.sgml: Change CORPAUTHOR to SDP.
	Overview needlessly wordy.

1998-06-08  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* refbook.sgml.in: Use public identifer for global.ent,
	and src.ent.  Add versions.ent and figs.ent.

	* Makefile.am (GENERATED_SGML): Add versions.ent.

1998-06-07  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* src.ent.in: Define graphic entities per html/print.

	* refbook.sgml.in: Add local.notation.class entity
	and notation for JPG.

1998-06-07  Alex Lancaster  <alex@santafe.edu>

	* config.ent: Removed.

	* src.ent:  Removed reference to config.ent.

1998-06-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* src.ent.in: Don't use extracted locations, as module entities
	now all reference public identifiers.

1998-06-05  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* src.ent.in: Add srcrevhistory.sgml.
